2005-05-23 Naba Kumar  <naba@gnome.org>

	* NEWS: Updated.
	* plugins/editor/anjuta-docman.c: Fixed premature destruction of
	save-as dialog (leading to crash later).

2005-05-22 Naba Kumar  <naba@gnome.org>

	* NEWS: Updated.
	* AUTHORS: Added developers for other projects. Updated.
	* TODO.tasks: Updated.
	* ChangeLog: Added past changelogs from anjuta-0.1.5.
	
2005-05-22 Naba Kumar  <naba@gnome.org>

	* plugins/tools/execute.c: Make parsable lines distinct by adding
	a "Click me" description in the message. Allow tools to open arbibrary
	file in editory using gdb-styled annotation (The line starts with two
	\032 characters followed by the file:line).
	
	* plugins/tools/scripts/prepare-changelog.pl,
	plugins/tools/scripts/tools-2.xml.in: Fixed to add changelog entry in
	ChangeLog file itself and open it.

2005-06-21 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/tools/execute.c:
	Parse output in message pane
	Correct a crash on plugin deactivation

	* plugins/tools/fileop.c,
	plugins/tools/tool.c,
	plugins/tools/tool.h:
	Load only valid tools

2005-06-21  Naba Kumar  <naba@gnome.org>

	* anjuta.spec.in: Fixed devel package requirement.

	* plugins/message-view/message-view.c: Scroll message on next/previous.

	* TODO.tasks: Updated.

	* manuals/reference/libanjuta/tmpl/ianjuta-context-list.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-context-text.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-context-tree.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-context.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-renderable.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-sand-box.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-transformable.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml: Updated.

	* libanjuta/anjuta-preferences.c,
	plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/build-basic-autotools/executer.c,
	plugins/class-gen/action-callbacks.c,
	plugins/class-gen/action-callbacks.h,
	plugins/class-gen/class_gen.c,